fixtures/corpus/errors/invalid-date-bigday.journal
; dates.test case 2: day 32 is out of range.
2010/12/32 x
    a   $1
    b
